# learn-tetris

./: .gitignore  pyproject.toml
src/: agent.py  main.py
src/controller/: controller.py
src/environment/: tetris_environment.py
